# nrf52811-solum-tag

./: .gitignore  Cargo.toml  Embed.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs
